--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: b08149204@gmail.com
-    password: mzmy frmp ibim kwqd
+    password: password
     properties:
       mail:
         smtp:
